feat: add filters section

--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 </head>
 
 <body>
+
     <section class="categories">
-        <div class="category-item" style="background-image: url('images/categories/shoes.jpg');">
+        <div class="category-item" style="background-image: url('./public/images/categories/shoes.jpg');">
             <div class="category-item-inner">
                 <div>
                     Shoes
                 </div>
             </div>
         </div>
-        <div class="category-item" style="background-image: url('images/categories/hats.jpg');">
+        <div class="category-item" style="background-image: url('./public/images/categories/hats.jpg');">
             <div class="category-item-inner">
                 <div>
                     Hats
                 </div>
             </div>
         </div>
-        <div class="category-item" style="background-image: url('images/categories/tshirts.jpg');">
+        <div class="category-item" style="background-image: url('./public/images/categories/tshirts.jpg');">
             <div class="category-item-inner">
                 <div>
                     T shirts
@@ -33,7 +34,7 @@
             </div>
         </div>
         <div class="category-item" style="
-                background-image: url('images/categories/sunglasses.jpg');
+                background-image: url('./public/images/categories/sunglasses.jpg');
             ">
             <div class="category-item-inner">
                 <div>
@@ -46,125 +47,196 @@
         Featured products
     </h2>
     <section class="featured-products">
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p1.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
+        <div>
+            <div class="filters">
+                <h2>Filters</h2>
+
+                <div class="filter-wrapper">
+                    <div class="filters-section">
+                        <strong>
+                            Categories
+                        </strong>
+                        <label class="filter">
+                            <input type="checkbox" /> Sunglasses
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> T-shirts
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Hats
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Shoes
+                        </label>
+                    </div>
+
+                    <div class="filters-section">
+                        <strong>
+                            Price
+                        </strong>
+                        <label class="filter">
+                            <input type="checkbox" /> Below 499
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> 500-999
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> 1000-1999
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Above 2000
+                        </label>
+                    </div>
+
+                    <div class="filters-section">
+                        <strong>
+                            Color
+                        </strong>
+                        <label class="filter">
+                            <input type="checkbox" /> Red
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Blue
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Green
+                        </label>
+                        <label class="filter">
+                            <input type="checkbox" /> Yellow
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p2.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p3.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Cap
-            </p>
-            <p class="description">
-                Perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p4.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Sunglasses
-            </p>
-            <p class="description">
-                Perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p5.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p6.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p7.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
-        </div>
-        <div class="featured-product-item">
-            <div style="background-image: url('images/products/p8.jpg');" class="featured-product-item-image"></div>
-            <p class="title">
-                Plain white t shirt
-            </p>
-            <p class="description">
-                A plain white t shirt perfect for summer!
-            </p>
-            <p class="price">
-                from $9.99
-            </p>
-            <button>
-                View item
-            </button>
+        <div class="feature-products-grid">
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p1.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p2.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p5.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Cap
+                </p>
+                <p class="description">
+                    Perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p4.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Sunglasses
+                </p>
+                <p class="description">
+                    Perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p3.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p6.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p7.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
+            <div class="featured-product-item">
+                <div style="background-image: url('./public/images/products/p8.jpg');"
+                    class="featured-product-item-image"></div>
+                <p class="title">
+                    Plain white t shirt
+                </p>
+                <p class="description">
+                    A plain white t shirt perfect for summer!
+                </p>
+                <p class="price">
+                    from $9.99
+                </p>
+                <button>
+                    View item
+                </button>
+            </div>
         </div>
     </section>
 </body>
